@@ -297,6 +297,7 @@ public class Mage extends StdCharClass
 		CMLib.ableMapper().addCharAbilityMapping(ID(),11,"Spell_Weaken",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),11,"Spell_MirrorImage",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),11,"Spell_ChangeSex",false);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),11,"Spell_ImprovedRepairingAura",25,false,CMParms.parseSemicolons("Spell_RepairingAura(100)",true));
 		// level 12
 		CMLib.ableMapper().addCharAbilityMapping(ID(),12,"Spell_Laughter",false);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),12,"Spell_Clairevoyance",false);
