@@ -1524,6 +1524,18 @@ powerful, or much weaker than the target`s current race, the spell has a smaller
 chance of succeeding.  Mages are unable to cast this spell on him/herself, relying \
 on Polymorph Self when they want to feel less like themselves.
 
+SPELL_IMPROVEDREPAIRINGAURA=SPELL_IMPROVED_REPAIRING_AURA
+SPELL_IMPROVED_REPAIRING_AURA=<ABILITY>\
+Usage    : CAST "IMPROVED REPAIRING AURA" [TARGET NAME] \n\r\
+Example  : cast "improved repairing aura" shirt\n\r\
+Example  : cast "improved repairing aura" bob\n\r\
+This spell will cause the affected item to automagically repair itself when \
+it takes damage.  It can also be targeted at a person to enchant a random \
+item.  The magic works very slowly at first, but gains in speed \
+and power as the mage does.  If the item completes its repair while the \
+spell is still active, it will switch to a nearby damaged item to \
+complete its time.
+
 SPELL_INCREASEGRAVITY=SPELL_INCREASE_GRAVITY
 SPELL_INCREASE_GRAVITY=<ABILITY>\
 Usage    : CAST INCREASE GRAVITY \n\r\
@@ -1906,6 +1918,16 @@ This spell causes the caster, and those in the same room or group as the caster 
 become invisible.  Like the "Invisibility" spell, entering combat will cancel \
 the spell.   Use the VISIBLE command to revoke this spell from yourself.
 
+SPELL_MASSREPAIRINGAURA=SPELL_MASS_REPAIRING_AURA
+SPELL_MASS_REPAIRING_AURA=<ABILITY>\
+Usage    : CAST "MASS REPAIRING AURA" [TARGET NAME] \n\r\
+Example  : cast "mass repairing aura" shirt\n\r\
+Example  : cast "mass repairing aura" bob\n\r\
+This spell will cause the affected item to automagically repair itself when \
+it takes damage.  It can also be targeted at a person or room to automatically \
+repair all damaged items on or in them.  The magic works very slowly at first, but gains in speed \
+and power as the mage does. 
+
 SPELL_MASSSLEEP=SPELL_MASS_SLEEP
 SPELL_MASS_SLEEP=<ABILITY>\
 Usage    : CAST "MASS SLEEP"\n\r\
@@ -2225,8 +2247,8 @@ to be used longer before suffering wear and tear.
 SPELL_REPAIRINGAURA=SPELL_REPAIRING_AURA
 SPELL_REPAIRING_AURA=<ABILITY>\
 Usage    : CAST "REPAIRING AURA" [TARGET NAME] \n\r\
-Example  : cast "REPAIRING aura" shirt\n\r\
-Example  : cast "REPAIRING aura" bob\n\r\
+Example  : cast "repairing aura" shirt\n\r\
+Example  : cast "repairing aura" bob\n\r\
 This spell will cause the affected item to automagically repair itself when \
 it takes damage.  It can also be targeted at a person to enchant a random \
 item.  The magic works very slowly at first, but gains in speed \
